@@ -1,3 +1,8 @@
+2004-01-02  Ronald Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/mpeg2enc/gstmpeg2enc.cc:
+	  fix const/nonconst compile issue.
+
 2004-01-02  David Schleef  <ds@schleef.org>
 
 	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_fixate),
